# Simple-Ray-Tracer

./: .gitignore  CMakeLists.txt  raytracer.sln
raytracer/: Source.cpp  raytracer.vcxproj  raytracer.vcxproj.filters
raytracer/src/: camera.h  main.cpp  material.h  ray.h  raytracer.cpp  raytracer.h  realtime.cpp  realtime.h  sphere.h  surface.h  surface_group.h  tgaimage.h  utils.h  vector3.h
results/: gradient.tga  gradientBG.tga  output.tga  scene-aa.tga  scene-diffuse-gamma.tga  scene-diffuse.tga  scene-metals.tga  scene-normals.tga  scene.tga
src/: raytracer.cpp  raytracer.h  tgaimage.cpp  tgaimage.h
